--- a/buildingmicroservices/livelessons-data/livelessons-data-redis/pom.xml
+++ b/buildingmicroservices/livelessons-data/livelessons-data-redis/pom.xml
@@ -13,5 +13,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-redis</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>4.1.4.RELEASE</version>
+		</dependency>
 	</dependencies>
 </project>
