new classes modified to work locally

--- a/buildingmicroservices/livelessons-data/livelessons-data-redis/src/main/resources/application.properties
+++ b/buildingmicroservices/livelessons-data/livelessons-data-redis/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-# spring.redis.host=
-# spring.redis.password=
-# spring.redis.port=
-# spring.redis.database=
+spring.redis.host=cachegrp.w8itaz.ng.0001.use1.cache.amazonaws.com
+spring.redis.password=secret
+spring.redis.port=6379
+#spring.redis.database=cachegrp
