--- a/buildingmicroservices/livelessons-data/livelessons-data-jdbc/pom.xml
+++ b/buildingmicroservices/livelessons-data/livelessons-data-jdbc/pom.xml
@@ -17,6 +17,14 @@
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-rest</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>mysql</groupId>
