adding logic for REDIS access to QA Staging.

--- a/buildingmicroservices/livelessons-data/livelessons-data-redis/src/main/resources/application.properties
+++ b/buildingmicroservices/livelessons-data/livelessons-data-redis/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.redis.host=cachegrp.w8itaz.ng.0001.use1.cache.amazonaws.com
-spring.redis.password=secret
-spring.redis.port=6379
+#QA Staging REDIS setup
+spring.redis.host=connect-qastg-redis.pch3iw.0001.use1.cache.amazonaws.com
+#spring.redis.password=secret
+spring.redis.port=11211
 #spring.redis.database=cachegrp
